--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -125,10 +125,10 @@ msgid "No specify upload file."
 msgstr "未指定上传文件"
 
 msgid ""
-"NB: Rename your config file to config.yml before upload. file will save to /"
+"NB: Rename your config file to config.yml or config.yaml before upload. file will save to /"
 "etc/openclash"
 msgstr ""
-"注意：上传之前，请将配置文件重命名为config.yml，文件将保存到 /etc/openclash 文件夹"
+"注意：上传之前，请将配置文件重命名为 config.yml 或者 config.yaml ，文件将保存到 /etc/openclash 文件夹"
 
 msgid "Clash Redir Port, Please Make Sure Ports Available"
 msgstr "OpenClash转发端口，请确保端口可用"
@@ -269,7 +269,7 @@ msgid "Others"
 msgstr "未匹配到规则的流量"
 
 msgid "Choose Proxy Group, Base On Your Servers Group in config.yml"
-msgstr "指定流量(策略)的代理方式，服务器组信息来源于您的config.yml"
+msgstr "指定流量(策略)的代理方式，服务器组信息来源于您的配置文件"
 
 msgid "Custom Clash Rules"
 msgstr "自定义规则(访问控制)"
