--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -13,14 +13,35 @@ msgstr "一个运行在OpenWrt上的Clash客户端"
 msgid "Technical Support"
 msgstr "技术支持"
 
-msgid "Clash Global State"
+msgid "Overview"
 msgstr "运行状态"
 
-msgid "Clash Settings"
+msgid "Takeover Settings"
+msgstr "接管设置"
+
+msgid "General Settings"
 msgstr "全局设置"
 
+msgid "Config Update"
+msgstr "配置文件订阅"
+
+msgid "Rules Update"
+msgstr "第三方规则订阅"
+
+msgid "Dashboard Settings"
+msgstr "外部控制"
+
+msgid "GEOIP数据库订阅"
+msgstr "外部控制"
+
+msgid "Enable"
+msgstr "启用"
+
+msgid "(Enable or Disable)"
+msgstr "(仅添加选中的设置)"
+
 msgid "Config Normal"
-msgstr " 检查通过"
+msgstr "检查通过"
 
 msgid "File Not Exist"
 msgstr "文件不存在"
@@ -37,9 +58,6 @@ msgstr "服务器日志"
 msgid "Logs"
 msgstr "服务器日志"
 
-msgid "Update Setting"
-msgstr "更新设置"
-
 msgid "General Settings"
 msgstr "全局设置"
 
@@ -54,6 +72,9 @@ msgstr "保存配置"
 
 msgid "Apply Configurations"
 msgstr "应用配置"
+
+msgid "Download Configurations"
+msgstr "下载配置"
 
 msgid "Select Mode"
 msgstr "OpenClash 运行模式"
@@ -113,13 +134,16 @@ msgid "Force Enable to Resolve ipv6 DNS Requests"
 msgstr "允许解析ipv6类型的DNS请求"
 
 msgid "Rules Setting"
-msgstr "规则设置"
+msgstr "规则设置(访问控制)"
 
 msgid "Server Config"
 msgstr "配置文件"
 
-msgid "Upload Clash Configuration"
+msgid "Upload Config"
 msgstr "上传配置文件"
+
+msgid "Upload"
+msgstr "上传"
 
 msgid "File saved to"
 msgstr "文件已成功上传到"
@@ -139,9 +163,6 @@ msgstr ""
 msgid "Please Make Sure Ports Available"
 msgstr "请确保端口可用"
 
-msgid "Subscription Update"
-msgstr "配置文件"
-
 msgid "Subcription Url"
 msgstr "订阅URL"
 
@@ -160,8 +181,20 @@ msgstr "自动更新"
 msgid "After clash start running, wait a moment for servers to resolve,enjoy"
 msgstr "运行后，请等待服务器上线"
 
-msgid "OpenClash Redir Port"
-msgstr "OpenClash 转发端口"
+msgid "Redir Port"
+msgstr "流量转发端口"
+
+msgid "SOCKS5 Port"
+msgstr "SOCKS5 代理端口"
+
+msgid "HTTP(S) Port"
+msgstr "HTTP(S) 代理端口"
+
+msgid "Set Authentication of SOCKS5/HTTP(S)"
+msgstr "设置 SOCKS5/HTTP(S) 认证信息"
+
+msgid "Not Null"
+msgstr "空值无效"
 
 msgid "Server Subscription Address"
 msgstr "服务器订阅地址"
@@ -173,7 +206,10 @@ msgid "Daily Server subscription update time"
 msgstr "每日服务器订阅更新时间"
 
 msgid "You Can Modify config file Here, Except The Settings That Were Taken Over"
-msgstr "您可以在这里直接修改配置文件, 仅针对未被接管的设置"
+msgstr "您可以在下方直接修改配置文件, 仅支持未被接管的设置"
+
+msgid "Default Config File With Correct General-Settings"
+msgstr "默认配置文件，方便您查询各项参数注释和正确的设置、顺序"
 
 msgid "Dashboard Secret"
 msgstr "管理页面登录密钥"
@@ -187,8 +223,11 @@ msgstr "管理页面地址示例: 192.168.1.1/openclash、192.168.1.1:9090/ui"
 msgid "Dashboard Port"
 msgstr "管理页面端口"
 
-msgid "GEOIP(By MaxMind) Update"
-msgstr "GEOIP 数据库(By MaxMind)"
+msgid "GEOIP Update"
+msgstr "GEOIP数据库订阅"
+
+msgid "Auto Update GEOIP Database"
+msgstr "自动更新GEOIP数据库"
 
 msgid "Update GEOIP Database"
 msgstr "更新GEOIP数据库"
@@ -197,7 +236,7 @@ msgid "Start Update GEOIP Database"
 msgstr "点击更新GEOIP数据库"
 
 msgid "Other Rules Update(Only in Use)"
-msgstr "第三方规则(仅对正在使用的规则生效)"
+msgstr "正在使用第三方规则时才能更新"
 
 msgid "Enable Other Rules"
 msgstr "第三方规则"
@@ -218,7 +257,7 @@ msgid "ConnersHua Return Rules"
 msgstr "ConnersHua 回国规则"
 
 msgid "Auto Update Other Rules"
-msgstr "启用第三方规则自动更新"
+msgstr "正在使用第三方规则时更新设置才会生效"
 
 msgid "Update Time (Every Week)"
 msgstr "更新时间(每周)"
