--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -145,7 +145,7 @@ msgstr "启用ipv6解析"
 
 msgid "Force Enable to Resolve ipv6 DNS Requests"
 msgstr ""
-"允许解析ipv6类型的DNS请求,如果您没有公网IPV6地址但开启了IPV6的DHCP服务,连接可能会出现异常"
+"允许解析ipv6类型的DNS请求，如果您没有公网IPV6地址但开启了IPV6的DHCP服务，客户端连接可能会出现异常"
 
 msgid "Rules Setting"
 msgstr "规则设置(访问控制)"
