--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -98,20 +98,17 @@ msgstr "Redir-Host 模式"
 msgid "fake-ip"
 msgstr "Fake-IP 模式"
 
-msgid "Will to Take Over Your General Settings, Network Error Try Flush DNS Cache"
-msgstr "启用将接管配置文件的模式设置，如客户端的网络无法连接请尝试清除DNS缓存"
-
-msgid "Disable Mode Control (Use Redir-Host Default If Not Set)"
-msgstr "使用配置文件设定的模式 (如未设置则默认使用 Redir-Host 模式)"
+msgid "Select Mode For OpenClash Work, Network Error Try Flush DNS Cache"
+msgstr "选择运行模式，如客户端的网络无法连接请尝试清除DNS缓存"
 
 msgid "Custom DNS Setting"
 msgstr "自定义上游DNS服务器"
 
 msgid "Use Custom Rules"
-msgstr "启用后将把自定义规则增加到配置文件并优先匹配"
+msgstr "启用后将把自定义规则增加到配置文件并优先匹配，规则请到下方文本框编辑"
 
 msgid "Add Custom DNS Servers"
-msgstr "设置自定义上游DNS服务器"
+msgstr "设置自定义上游DNS服务器，在上方全局设置中启用本功能后生效"
 
 msgid "Set OpenClash Upstream DNS Resolve Server"
 msgstr "启用将覆盖配置文件内的设置，请先在下方配置好服务器"
@@ -320,22 +317,28 @@ msgid "Others"
 msgstr "未匹配到规则的流量"
 
 msgid "Choose Proxy Group, Base On Your Servers Group in config.yaml"
-msgstr "指定流量(策略)的代理方式，服务器组信息来源于您的配置文件"
+msgstr "指定流量(策略)的代理方式，只支持选择（服务器组），信息来源于您的配置文件"
 
 msgid "Custom Clash Rules"
 msgstr "自定义规则(访问控制)"
 
-msgid "Custom Clash Rules Here"
-msgstr "设置自定义规则"
+msgid "Disable Custom Rules"
+msgstr "关闭"
 
-msgid "Disable Custom Clash Rules"
-msgstr "不设置自定义规则"
+msgid "Enable Custom Rules"
+msgstr "启用"
 
-msgid "Enable Custom Clash Rules"
-msgstr "设置自定义规则"
+msgid "Custom Rules Here, For More Go Github:https://github.com/Dreamacro/clash/blob/master/README.md"
+msgstr "设置自定义规则，详细信息请前往Github( https://github.com/Dreamacro/clash/blob/master/README.md )查询"
 
-msgid "For More Go Github:https://github.com/Dreamacro/clash"
-msgstr "更多规则信息请前往Github( https://github.com/Dreamacro/clash )查询"
+msgid "Custom Hosts Here, For More Go Github:https://github.com/Dreamacro/clash/blob/master/README.md"
+msgstr "设置自定义Hosts，详细信息请前往Github( https://github.com/Dreamacro/clash/blob/master/README.md )查询"
+
+msgid "Set Custom Rules, Will Add When Flag Turn on"
+msgstr "设置自定义规则，在上方规则设置中启用本功能后生效"
+
+msgid "Set Custom Hosts, Only Work with Redir-Host Mode"
+msgstr "设置自定义Hosts，仅在Redir-host模式下生效"
 
 msgid "Version Update"
 msgstr "版本更新"
@@ -354,6 +357,9 @@ msgstr "最新内核版本"
 
 msgid "Unknown"
 msgstr "查询失败"
+
+msgid "New!"
+msgstr "可更新！"
 
 msgid "Chose to Download"
 msgstr "选择内核编译版本"
