--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -92,6 +92,9 @@ msgstr "Redir-Host（兼容）模式"
 msgid "fake-ip"
 msgstr "Fake-IP（增强）模式"
 
+msgid "fake-ip-tun"
+msgstr "Fake-IP（TUN）模式【依赖kmod-tun】"
+
 msgid "Select Mode For OpenClash Work, Network Error Try Flush DNS Cache"
 msgstr "选择运行模式，在兼容模式下无法代理路由器自身流量，如客户端的网络无法连接请尝试清除DNS缓存"
 
