--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -92,7 +92,7 @@ msgstr "Redir-Host（兼容）模式"
 msgid "fake-ip"
 msgstr "Fake-IP（增强）模式"
 
-msgid "fake-ip-tun"
+msgid "fake-ip(tun mode)"
 msgstr "Fake-IP（TUN）模式【依赖kmod-tun】"
 
 msgid "Select Mode For OpenClash Work, Network Error Try Flush DNS Cache"
