--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -669,6 +669,9 @@ msgstr "（格式示例：香港、台湾&bgp）"
 msgid "Config File List"
 msgstr "配置文件列表"
 
+msgid "Use For All Config File"
+msgstr "添加到所有配置文件"
+
 msgid "Proxy-Provider"
 msgstr "代理集管理"
 
