--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -95,6 +95,12 @@ msgstr "Fake-IP（增强）模式"
 msgid "fake-ip(tun mode)"
 msgstr "Fake-IP（TUN）模式【依赖kmod-tun】"
 
+msgid "redir-host-vpn(game mode)"
+msgstr "Redir-Host（游戏）模式【依赖kmod-tun】"
+
+msgid "fake-ip-vpn(game mode)"
+msgstr "Fake-IP（游戏）模式【依赖kmod-tun】"
+
 msgid "Select Mode For OpenClash Work, Network Error Try Flush DNS Cache"
 msgstr "选择运行模式，在兼容模式下无法代理路由器自身流量，如客户端的网络无法连接请尝试清除DNS缓存"
 
@@ -228,8 +234,11 @@ msgstr "规则设置（访问控制）"
 msgid "Server Config"
 msgstr "配置文件管理"
 
-msgid "Upload Config"
-msgstr "上传配置文件"
+msgid "Upload File Type"
+msgstr "上传文件类型"
+
+msgid "Proxy Provider File"
+msgstr "代理集文件"
 
 msgid "Upload"
 msgstr "上传"
@@ -245,7 +254,10 @@ msgstr "未指定上传文件"
 
 msgid ""
 "Only Support yaml what would be save to /etc/openclash/config/"
-msgstr "注意：只支持【yaml】后缀的配置文件，文件将被保存到 /etc/openclash/config/"
+msgstr "注意：只支持【yaml】后缀的文件，文件将被保存到 /etc/openclash/config/"
+
+msgid "Proxy Provider File List"
+msgstr "代理集文件列表"
 
 msgid "Please Make Sure Ports Available"
 msgstr "请确保端口可用"
@@ -690,8 +702,8 @@ msgstr "代理集别名（请勿重名）"
 msgid "Provider Path"
 msgstr "代理集路径（Path）"
 
-msgid "【HTTP Type】./hk.yaml or 【File Type】/etc/openclash/config/hk.yaml"
-msgstr "【HTTP 类型示例】./hk.yaml，【文件类型示例】/etc/openclash/config/hk.yaml"
+msgid "Update Your Proxy Provider File From Config Luci Page"
+msgstr "请先在配置文件管理页面上传您的代理集文件"
 
 msgid "Provider URL"
 msgstr "代理集URL"
