--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -487,7 +487,7 @@ msgid "Delete Severs"
 msgstr "清空服务器配置"
 
 msgid "Delete Proxy Provider"
-msgstr "清空节点集配置"
+msgstr "清空代理集配置"
 
 msgid "Delete Groups"
 msgstr "清空策略组配置"
