--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -108,7 +108,7 @@ msgid "fake-ip-vpn(game mode)"
 msgstr "Fake-IP（游戏）模式【依赖kmod-tun】"
 
 msgid "Select Mode For OpenClash Work, Try Flush DNS Cache If Network Error"
-msgstr "选择运行模式，如客户端的网络异常请尝试清除DNS缓存"
+msgstr "选择运行模式，Redir-Host模式下无法代理路由器自身流量，如客户端的网络异常请尝试清除DNS缓存"
 
 msgid "Proxy Mode"
 msgstr "*代理模式"
@@ -304,8 +304,11 @@ msgstr "配置文件订阅地址"
 msgid "Auto Update Server subscription"
 msgstr "自动更新配置文件"
 
-msgid "You Can Modify config file Here, Except The Settings That Were Taken Over"
-msgstr "您可以在下方直接修改配置文件, 仅支持未被接管的设置"
+msgid "Modify Your Config file: "
+msgstr "您可以在下方直接修改配置文件: "
+
+msgid " Here, Except The Settings That Were Taken Over"
+msgstr " ，仅支持未被接管的设置"
 
 msgid "Default Config File With Correct General-Settings"
 msgstr "参考配置文件，方便您查询各项参数注释和正确的设置、顺序"
@@ -750,6 +753,8 @@ msgstr "未下载"
 msgid "Order Number"
 msgstr "序号"
 
+msgid "Game Rules Manage"
+msgstr "游戏规则管理"
 
 
 
