--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -304,11 +304,11 @@ msgstr "配置文件订阅地址"
 msgid "Auto Update Server subscription"
 msgstr "自动更新配置文件"
 
-msgid "Modify Your Config file: "
-msgstr "您可以在下方直接修改配置文件: "
+msgid "Modify Your Config file:"
+msgstr "您可以在下方直接修改配置文件:"
 
-msgid " Here, Except The Settings That Were Taken Over"
-msgstr " ，仅支持未被接管的设置"
+msgid "Here, Except The Settings That Were Taken Over"
+msgstr "，仅支持未被接管的设置"
 
 msgid "Default Config File With Correct General-Settings"
 msgstr "参考配置文件，方便您查询各项参数注释和正确的设置、顺序"
@@ -754,7 +754,7 @@ msgid "Order Number"
 msgstr "序号"
 
 msgid "Game Rules Manage"
-msgstr "游戏规则管理"
+msgstr "管理游戏规则"
 
 
 
