--- a/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/i18n/zh-cn/openclash.zh-cn.po
@@ -235,6 +235,9 @@ msgstr ""
 "固件须配置好IPV6的NAT，如你不使用IPV6请关闭固件的相关服务，避免客户端连接出现异常"
 
 msgid "Rules Setting"
+msgstr "规则设置"
+
+msgid "Rules Setting(Access Control)"
 msgstr "规则设置（访问控制）"
 
 msgid "Config Manage"
@@ -443,6 +446,9 @@ msgid "Choose Proxy Group, Base On Your Servers Group in config.yaml"
 msgstr "指定流量(策略)的代理方式，只支持选择（服务器组），信息来源于您的配置文件"
 
 msgid "Custom Clash Rules"
+msgstr "自定义规则"
+
+msgid "Custom Clash Rules(Access Control)"
 msgstr "自定义规则(访问控制)"
 
 msgid "Custom Rules Here, For More Go Github:https://github.com/Dreamacro/clash/blob/master/README.md, IP To CIDR: http://ip2cidr.com"
@@ -788,3 +794,45 @@ msgstr "*代理UDP流量"
 
 msgid "Select Mode For UDP Traffics, The Servers Must Support UDP while Choose Proxy"
 msgstr "启用时服务器必须支持UDP转发"
+
+msgid "Operation Mode"
+msgstr "操作模式"
+
+msgid "Select Operation Mode"
+msgstr "*页面操作模式"
+
+msgid "redir-host mode"
+msgstr "Redir-Host 模式"
+
+msgid "fake-ip mode"
+msgstr "Fake-IP 模式"
+
+msgid "Switch Operation Mode"
+msgstr "切换操作模式"
+
+msgid "Switch Mode"
+msgstr "切换模式"
+
+msgid "Access Control"
+msgstr "访问控制"
+
+msgid "Access Control Mode"
+msgstr "访问控制模式"
+
+msgid "Black List Mode"
+msgstr "黑名单模式"
+
+msgid "White List Mode"
+msgstr "白名单模式"
+
+msgid "LAN Bypassed Host List"
+msgstr "不走代理的局域网LAN IP"
+
+msgid "LAN Proxied Host List"
+msgstr "走代理的局域网LAN IP"
+
+msgid "Rule Match Proxy Mode"
+msgstr "*仅代理命中规则流量"
+
+msgid "Only Proxy Rules Match, Prevent BT Passing"
+msgstr "仅允许代理命中规则的流量，防止BT下载流量经过代理"
